Minor style adjustments according to bug-list

--- a/style/_content.scss
+++ b/style/_content.scss
@@ -112,7 +112,7 @@ h6 {
             }
 
             figcaption {
-                font-family: 'GT-Haptik-Italic', sans-serif;
+                font-family: 'GT-Haptik-Regular-Oblique', sans-serif;
             }
         }
 
