--- a/style/style.scss
+++ b/style/style.scss
@@ -155,6 +155,7 @@ table {
 .image-404 {
     width: 100%;
     height: auto;
+    margin-top: 100px;
 }
 
 @media (min-width: $breakpoint-tablet) {
